# grs

./: .gitignore  .grsignore  Cargo.toml
grs/: Cargo.toml
grs-lib/: Cargo.toml  default-config.toml
grs-lib/src/: config.rs  diff.rs  error.rs  ignore.rs  lib.rs  lockfile.rs  model.rs  paths.rs  session.rs  snap.rs  store.rs  ulid.rs  watcher.rs
grs-lib/src/util/: fs.rs  mod.rs  time.rs
grs-lib/tests/: watcher.rs
grs/src/: cli_util.rs  command_error.rs  lib.rs  main.rs  ui.rs  warnings.rs
grs/src/commands/: completions.rs  config.rs  mod.rs  new.rs  replay.rs  session.rs  watch.rs
grs/src/tui/: code_review.rs  diff_view.rs  file_view.rs  highlight.rs  input.rs  mod.rs  replay_view.rs  session_list.rs  snap_list.rs  theme.rs  watch.rs  watcher.rs
grs/tests/: snapshots.rs  tui.rs
grs/tests/snapshots/: snapshots__help_text_top_level.snap
pi/: grs-capture.ts
pi/teach/: SKILL.md
teach/: SKILL.md
