[workspace]
resolver = "2"
members = ["grs-lib", "grs"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["grs contributors"]

[workspace.dependencies]
# pin everything once; inherit with { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
notify = "6"
notify-debouncer-full = "0.3"
similar = { version = "2", features = ["text"] }
ignore = "0.4"
tempfile = "3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
toml_edit = "0.22"
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
crossterm = "0.27"
ratatui = "0.26"
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time", "signal", "process"] }
grs-lib = { path = "grs-lib" }

# dev dependencies
insta = { version = "1", features = ["yaml"] }
clap_mangen = "0.2"

[workspace.lints.clippy]
uninlined_format_args = "warn"
unnecessary_semicolon = "warn"
needless_pass_by_value = "warn"
