[package]
name = "grs-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Engine for grs: minimal replay timelapse for file edits"

[lib]
name = "grs_lib"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
similar = { workspace = true }
ignore = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
